# ic-data-platform

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json
src/: data_platform.did  lib.rs  model.rs  request_parser.rs  response_parser.rs  upgrade.rs  util.rs
